2016-03-08  Martin Sebor  <msebor@redhat.com>

	PR c++/62096
	* g++.dg/warn/overflow-warn-7.C: New test.

2016-03-08  Jason Merrill  <jason@redhat.com>

	* lib/g++-dg.exp (g++-dg-runtest): Handle "concepts" in std list.
	* lib/target-supports.exp (check_effective_target_concepts): New.

2016-03-08  Jakub Jelinek  <jakub@redhat.com>

	PR c++/70135
	* g++.dg/cpp1y/constexpr-loop4.C: New test.
	* g++.dg/ubsan/pr70135.C: New test.

	PR target/70110
	* gcc.dg/pr70110.c: New test.

2016-03-07  Martin Jambor  <mjambor@suse.cz>

	* c-c++-common/gomp/clauses-1.c: Remove dg-options.
	* c-c++-common/gomp/if-1.c: Likewise.
	* c-c++-common/gomp/pr61486-2.c: Likewise.
	* c-c++-common/gomp/target-teams-1.c: Moved dg-options except -fopenmp
	to dg-additional-options.
	* g++.dg/gomp/gomp.exp: Pass -Wno-hsa to all tests.
	* g++/gomp/target-teams-1.c: Likewise.
	* gcc.dg/gomp/gomp.exp: Likewise.
	* gcc.dg/gomp/pr68128-2.c: Moved dg-options except -fopenmp to
	dg-additional-options.
	* gfortran.dg/gomp/gomp.exp: Likewise.
	* gfortran.dg/gomp/target1.f90: Remove dg-options.
	* gfortran.dg/gomp/target2.f90: Moved dg-options except -fopenmp to
	dg-additional-options.
	* gfortran.dg/gomp/target3.f90: Remove dg-options.

2016-03-07  Martin Jambor  <mjambor@suse.cz>

	* lib/target-supports.exp (check_effective_target_offload_hsa): New.
	* c-c++-common/gomp/gridify-1.c: New test.
	* gfortran.dg/gomp/gridify-1.f90: Likewise.

2016-03-07  Andre Vieira  <andre.simoesdiasvieira@arm.com>

	* gcc.target/arm/pr45701-1.c: Change assembler scan to not
	trigger for cortex-r8, when scanning for register r8.
	* gcc.target/arm/pr45701-2.c: Likewise.

2016-02-26  Richard Biener  <rguenther@suse.de>
            Jeff Law  <law@redhat.com>

	PR tree-optimization/69740
	* gcc.c-torture/compile/pr69740-1.c: New test.
	* gcc.c-torture/compile/pr69740-2.c: New test.

2016-03-07  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* lib/target-supports.exp
	(check_effective_target_whole_vector_shift): Enable for PPC64.